--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/mapbox-gl": "^3.4.1",
     "expo": "^53.0.23",
     "expo-blur": "~14.1.5",
+    "expo-build-properties": "~0.14.8",
     "expo-camera": "~16.1.11",
     "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.7",
